--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -100,12 +100,6 @@
     "HISTORICAL_DATA_BASE_URL = \"https://api.investing.com/api/financialdata/historical/{0}\"\n",
     "\n",
     "common_headers ={\n",
-    "    \"authority\": \"api.investing.com\",\n",
-    "    \"cache-control\": \"no-cache\",\n",
-    "    \"domain-id\": \"www\",\n",
-    "    \"origin\": \"https://www.investing.com\",\n",
-    "    \"pragma\": \"no-cache\",\n",
-    "    \"referer\": \"https://www.investing.com/\",\n",
     "    \"user-agent\": random.choice(USER_AGENTS)\n",
     "}\n",
     "\n",
@@ -173,7 +167,7 @@
     "    except Exception as e:\n",
     "        print(\"{0} symbol not found on investing website..!\".format(symbol))\n",
     "\n",
-    "# print(get_historical_data((\"TCS\",\"2022-08-01\",\"2022-08-31\")))\n",
+    "# print(get_historical_data((\"SBI\",\"2022-08-01\",\"2022-08-31\")))\n",
     "# print(get_historical_data((\"0P0000SBP7\",\"2022-08-01\",\"2022-08-31\")))\n",
     "# print(get_historical_data((\"KTPU\",\"2022-08-01\",\"2022-08-31\"))) \n",
     "# print(get_historical_data((\"NIFTYAUTO\",\"2022-08-01\",\"2022-08-31\")))\n"
@@ -223,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main()"
+    "# main()"
    ]
   }
  ],
