--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -46,7 +46,8 @@
    "outputs": [],
    "source": [
     "# Run and install the dependencies only once.\n",
-    "# ! pip install requests"
+    "# ! pip install requests\n",
+    "# ! pip install cfscrape"
    ]
   },
   {
@@ -64,12 +65,14 @@
    "source": [
     "import requests\n",
     "import json\n",
+    "import cfscrape\n",
+    "\n",
+    "scraper = cfscrape.create_scraper()\n",
     "\n",
     "## Extract the json formatted data from the investing xhr request.\n",
     "def _get_json_(url:str, headers={}, params={}):\n",
-    "    session = requests.session()\n",
     "    print(\"Fetching {}..\".format(url))\n",
-    "    response = session.get(\n",
+    "    response = scraper.get(\n",
     "        url=url,\n",
     "        headers=headers,\n",
     "        params=params\n",
@@ -92,6 +95,7 @@
    "outputs": [],
    "source": [
     "## imports\n",
+    "import os\n",
     "import csv\n",
     "import random\n",
     "from user_agents import USER_AGENTS\n",
@@ -100,7 +104,9 @@
     "HISTORICAL_DATA_BASE_URL = \"https://api.investing.com/api/financialdata/historical/{0}\"\n",
     "\n",
     "common_headers ={\n",
-    "    \"user-agent\": random.choice(USER_AGENTS)\n",
+    "    \"domain-id\": \"www\",\n",
+    "    # \"user-agent\": random.choice(USER_AGENTS),\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36\"\n",
     "}\n",
     "\n",
     "## Function to extract the table of OHLC\n",
@@ -156,9 +162,17 @@
     "                \"Volume\": \"NA\",\n",
     "                \"Change\": \"NA\",\n",
     "            })\n",
-    "            \n",
+    "\n",
+    "        current_dir = os.getcwd()\n",
+    "        if os.path.exists(f\"{current_dir}/historical_data_csv\"):\n",
+    "            path = current_dir + \"/\" + \"historical_data_csv\"\n",
+    "            # print(path)\n",
+    "        else:\n",
+    "            os.mkdir(\"historical_data_csv\")\n",
+    "            path = current_dir + \"/\" + \"historical_data_csv\"\n",
+    "            # print(path)\n",
     "        field_names = [\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\", \"Change\"]\n",
-    "        with open(\"{0}-{1}-{2}.csv\".format(symbol,category,country), \"w\", newline=\"\") as csvfile:\n",
+    "        with open(\"{0}/{1}-{2}-{3}.csv\".format(path,symbol,category,country), \"w\", newline=\"\") as csvfile:\n",
     "            writer = csv.DictWriter(csvfile,fieldnames=field_names)\n",
     "            writer.writeheader()\n",
     "            writer.writerows(output)\n",
@@ -187,7 +201,7 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
+    "# from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def main():\n",
     "    symbols = input(\"Enter symbols(separated by space): \").split()\n",
@@ -200,8 +214,7 @@
     "        for symbol in symbols:\n",
     "            historical_data_args.append((symbol,from_date,to_date))\n",
     "\n",
-    "        with ThreadPoolExecutor() as executor:\n",
-    "            executor.map(get_historical_data, historical_data_args)\n"
+    "        [get_historical_data(argument) for argument in historical_data_args]\n"
    ]
   },
   {
@@ -217,7 +230,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# main()"
+    "main()\n",
+    "\n",
+    "# Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36\n",
+    "\n",
+    "# LIST OF 100 stocks\n",
+    "# ABB ACC ABAN ABGS ADEL ADAN AGRO AIAE AKZO ALBK ACLL ALOK GEPO AMAR ABUJ AMTK CASE ANRA ADBK APLH APLO APTA ARVN AISG ASOK ASPN ASTR ARBN SANO AXBK BGRE LIND BAJA BJEL BJFN BJFS BJAT BJHN BILT BLMR BACH BOI BASF BATA BEML BRGR BFUT BFRG BPCL BRTI BHEL BAJE TATS BION BRLC BOB BLDT BLUS BDYN BRFL BOSH BRIT CADI CNBK CRBR CAST CBI CNTY CESC CHMB CHPC CHLA CIPL CTBK CLAC COAL COLG CCRI CRBK CORF COKI CRSL CGPO CUMM DBRL DABU DPFE DELT DCBA DWNH DNBK DSTV DIVI DLF REDY EIHO ECLE EDEL EDSO EICH\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note: If any of the scraper stop to get the data. Interchange or uncomment the `user-agent` key of the `common_header`"
    ]
   }
  ],
