Input format changes to ,

--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -216,7 +216,7 @@
     "# from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def main():\n",
-    "    symbols = input(\"Enter symbols(separated by space): \").split()\n",
+    "    symbols = input(\"Enter symbols(separated by space): \").split(\",\")\n",
     "    from_date = input(\"Enter from date(yyyy-mm-dd): \")\n",
     "    to_date = input(\"Enter to date(yyyy-mm-dd): \")\n",
     "    if datetime.strptime(from_date,\"%Y-%m-%d\").date() > datetime.strptime(to_date,\"%Y-%m-%d\").date():\n",
@@ -240,7 +240,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execution or calling of main function"
+    "## Execution or calling of main function\n",
+    "#### NOTE: Inputs to be splitted by a \",\"."
    ]
   },
   {
@@ -254,40 +255,39 @@
     "# Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36\n",
     "\n",
     "## TESTING STOCKS - Symbol Column \n",
-    "# TS APBR GGAL TXAR PAMP TECO2 BPAT ALUA BBAR BMA EDN TRAN MIRG BHIP AGRO AUSO GAMI EMBR3 ENBR3 ZGPS\n",
-    "# CPLE6 CRDE3 CSAN3 CSMG3 CSNA3 LIQO3 CTNM4 CYRE3 DASA3 DIRR3 DTEX3 ECOR3 EEEL3 ELEK4 ELET3 ELET6 PROJ 5EO\n",
-    "# CTSA3 CTSA4 CVCB3T DOHL4 DTCY3 EALT4 EKTR4 ELEK3 EMAE4 ENGI3 ENMT3 ESTR4 FESA3 FNAM11 FSRF11KRIP 5CP 5SR\n",
-    "# PBJT PLRP PRPF STVK VBIP VKNK BRSP CTRT EDPL EFNF FRTF NPRF PVNF UNFT BOAT ENPS GINX INGM NTRN SMPJ TBOR UNPL 600758\n",
-    "# 600490 600055 600203 600346 600381 600385 600418 600556 600576 600604 600610 600629 600634 600671 600682 600685 600730\n",
-    "# AURA AVER BBYL FNTS BLRX ELWS BRAN BRIL BWAY BRMG CAMT CAST CDEV CANF CGEN CMER DANE DELT DIFI DIMRI OPCT 600753\n",
+    "# TS,APBR,GGAL,TXAR,PAMP,TECO2,BPAT,ALUA,BBAR,BMA,EDN,TRAN,MIRG,BHIP,AGRO,AUSO,,GAMI,EMBR3,ENBR3,ZGPS,\n",
+    "# CPLE6,CRDE3,CSAN3,CSMG3,CSNA3,LIQO3,CTNM4,CYRE3,DASA3,DIRR3,DTEX3,ECOR3,EEEL3,ELEK4,ELET3,ELET6,PROJ,5EO,\n",
+    "# CTSA3,CTSA4,CVCB3T,DOHL4,DTCY3,EALT4,EKTR4,ELEK3,EMAE4,ENGI3,ENMT3,ESTR4,FESA3,FNAM11,FSRF11KRIP,5CP,5SR,\n",
+    "# PBJT,PLRP,PRPF,STVK,VBIP,VKNK,BRSP,CTRT,EDPL,EFNF,FRTF,NPRF,PVNF,UNFT,BOAT,ENPS,GINX,INGM,NTRN,SMPJ,TBOR,UNPL,600758,\n",
+    "# 600490,600055,600203,600346,600381,600385,600418,600556,600576,600604,600610,600629,600634,600671,600682,600685,600730,\n",
+    "# AURA,AVER,BBYL,FNTS,BLRX,ELWS,BRAN,BRIL,BWAY,BRMG,CAMT,CAST,CDEV,CANF,CGEN,CMER,DANE,DELT,DIFI,DIMRI,OPCT,600753\n",
     "\n",
     "### TESTING FUNDS - SYMBOL column\n",
-    "# 0P0000YO4P LP65153969 0P00012AYY 0P0000NGP0 0P00007IV4 0P0000Q7CG 0P0000O85Q LP68040230 0P0000Q7CM 0P0000O85S 0P000077YZ LP68077432 \n",
-    "# 0P00014O2D 0P0000SJE0 0P000078OP 0P00007FN6 LP65014940 LP63512373 519931 0P0000KOZZ 519015 217001 0P0000G0N4 0P0000V9U3 \n",
-    "# 0P0000JS6H 0P0000MXR7 240002 80002 450001 0P00009RFL 0P0000SU43 0P0000WN3S 0P0000WN3V 0P0000WN3U 0P00000CAX 0P00000RJZ 0P0000N6L3\n",
+    "# 0P0000YO4P,LP65153969,0P00012AYY,0P0000NGP0,0P00007IV4,0P0000Q7CG,0P0000O85Q,LP68040230,0P0000Q7CM,0P0000O85S,0P000077YZ,LP68077432,\n",
+    "# 0P00014O2D,0P0000SJE0,0P000078OP,0P00007FN6,LP65014940,LP63512373,519931,0P0000KOZZ,519015,217001,0P0000G0N4,0P0000V9U3,\n",
+    "# 0P0000JS6H,0P0000MXR7,240002,80002,450001,0P00009RFL,0P0000SU43,0P0000WN3S,0P0000WN3V,0P0000WN3U,0P00000CAX,0P00000RJZ,0P0000N6L3\n",
     "\n",
     "### TESTING ETF'S - SYMBOL column \n",
-    "# QOZ FEMX USD VGS A200 F100 ETHI VGAD FLOT QUAL HVST ASIA VEU WDMF FTGG FTGE 3USLG 7GX4 KUW8G W311 KUW8G W311 KUW8G W311 1HSA H4ZF \n",
-    "# ICPR M100 ICPR SBIF KTGF JBES SBFP DSPL ICNI KOTK N100 NBES KOTM ICIA KONV BBES SBIN GBES ICIV ICIT SBET ICSP UTGF IDTI\n",
+    "# QOZ,FEMX,USD,VGS,A200,F100,ETHI,VGAD,FLOT,QUAL,HVST,ASIA,VEU,WDMF,FTGG,FTGE,3USLG,7GX4,KUW8G,W311,KUW8G,W311,KUW8G,W311,1HSA,H4ZF\n",
     "\n",
     "### testing Indices - symbol column \n",
-    "# AXINJD AXMAJD AXMEJD AXAF AXPBJD AXAT AXKO AXJO AXGD AXDJ AXSJ AXEJ AXFJ AXHJ AXNJ AXIJ AXMJ AXPJ AXJR AXTJ AXUJ AXMM AORD \n",
-    "# BSEMET BSEOIL BSEPOWER BSEPSU BSEREAL NIFVIX B50INCDN NIFTY200 NSED NV20 NIFTY500 NIFMDCP100 NIMDCP50 NN50 SPBSEFMCG NIFSMCP100 NIFTY100\n",
+    "# AXINJD,AXMAJD,AXMEJD,AXAF,AXPBJD,AXAT,AXKO,AXJO,AXGD,AXDJ,AXSJ,AXEJ,AXFJ,AXHJ,AXNJ,AXIJ,AXMJ,AXPJ,AXJR,AXTJ,AXUJ,AXMM,AORD,\n",
+    "# BSEMET,BSEOIL,BSEPOWER,BSEPSU,BSEREAL,NIFVIX,B50INCDN,NIFTY200,NSED,NV20,NIFTY500,NIFMDCP100,NIMDCP50,NN50,SPBSEFMCG,NIFSMCP100,NIFTY100\n",
     "\n",
     "## TESTING BONDS - name column \n",
-    "# India 10Y India 30Y India 24Y India 19Y India 15Y India 14Y India 13Y India 12Y India 11Y India 9Y India 4Y\n",
+    "# India 10YI,ndia 30Y,India 24Y,India 19Y,India 15Y,India 14Y,India 13Y,India 12Y,India 11Y,India 9Y,India 4Y\n",
     "\n",
     "### TESTING CERTIFICATES - symbol column\n",
-    "# DEHY1Y7L DEVZ716B DECE8NK7 DECE6M8S DEAA0XYR DEAA0C4K DE768918 DEABN0EW DEAA0KFZ DE918607 DEABN1EJ DEDB3WT1 DEDZ0B77 DEDB3CTQ DEDZ0B66 DEDZ2X4Q DE635186\n",
+    "# DEHY1Y7L,DEVZ716B,DECE8NK7,DECE6M8S,DEAA0XYR,DEAA0C4K,DE768918,DEABN0EW,DEAA0KFZ,DE918607,DEABN1EJ,DEDB3WT1,DEDZ0B77,DEDB3CTQ,DEDZ0B66,DEDZ2X4Q,DE635186\n",
     "\n",
     "### TESTING CRYPTOS - symbol column \n",
-    "# BTC ETH BNB USDT ADA DOT XRP UNI LTC LINK THETA USDC BCH XLM LUNA\n",
+    "# BTC,ETH,BNB,USDT,ADA,DOT,XRP,UNI,LTC,LINK,THETA,USDC,BCH,XLM,LUNA\n",
     "\n",
     "### TESTING COMMODITIES - name column \n",
-    "# MCX Aluminum Mini MCX Aluminum MCX Copper MCX Copper Mini MCX Gold 1 Kg MCX Gold Guinea MCX Gold Mini MCX Gold Petal MCX Gold Petal Del MCX Lead MCX Lead Mini MCX Nickel\n",
+    "# MCX Aluminum Mini,MCX Aluminum,MCX Copper,MCX Copper Mini,MCX Gold 1 Kg,MCX Gold Guinea,MCX Gold Mini,MCX Gold Petal,MCX Gold Petal Del,MCX Lead,MCX Lead Mini,MCX Nickel\n",
     "\n",
     "### TESTING Forex - name column\n",
-    "# USD/INR USD/EUR USD/JPY INR/EUR INR/JPY"
+    "# USD/INR,USD/EUR,USD/JPY,INR/EUR,INR/JPY"
    ]
   },
   {
