--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -216,7 +216,7 @@
     "# from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def main():\n",
-    "    symbols = input(\"Enter symbols(separated by space): \").split(\",\")\n",
+    "    symbols = input(\"Enter symbols(separated by , ): \").split(\",\")\n",
     "    from_date = input(\"Enter from date(yyyy-mm-dd): \")\n",
     "    to_date = input(\"Enter to date(yyyy-mm-dd): \")\n",
     "    if datetime.strptime(from_date,\"%Y-%m-%d\").date() > datetime.strptime(to_date,\"%Y-%m-%d\").date():\n",
