Added THreading to main

--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -191,7 +191,8 @@
     "        return True\n",
     "    except Exception as e:\n",
     "        print(\"{0} not found on investing website\".format(symbol))\n",
-    "        return symbol\n",
+    "        return False\n",
+    "        # return symbol\n",
     "\n",
     "# print(get_historical_data((\"LART\",\"2022-08-01\",\"2022-08-31\")))\n",
     "# print(get_historical_data((\"N225INV2\",\"2022-08-01\",\"2022-08-31\")))\n",
@@ -212,28 +213,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "from datetime import datetime\n",
-    "# from concurrent.futures import ThreadPoolExecutor\n",
+    "import pandas as pd\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def main():\n",
-    "    symbols = input(\"Enter symbols(separated by , ): \").split(\",\")\n",
+    "    df = pd.read_csv(\"F:\\\\UpWork\\\\Scrape_investing_Ashish_Sir\\\\categories\\\\stocks.csv\") # Change the path before running\n",
+    "    symbols = df[\"symbol\"].to_list()\n",
+    "    # symbols = input(\"Enter symbols(separated by , ): \").split(\",\")\n",
     "    from_date = input(\"Enter from date(yyyy-mm-dd): \")\n",
     "    to_date = input(\"Enter to date(yyyy-mm-dd): \")\n",
     "    if datetime.strptime(from_date,\"%Y-%m-%d\").date() > datetime.strptime(to_date,\"%Y-%m-%d\").date():\n",
     "        print(\"Your from_date is greater than the to_date\")\n",
     "    else:\n",
     "        historical_data_args = []\n",
-    "        not_found_symbols = []\n",
-    "        for symbol in symbols:\n",
-    "            historical_data_args.append((symbol,from_date,to_date))\n",
+    "        [historical_data_args.append((symbol,from_date,to_date)) for symbol in symbols]\n",
+    "        ############ THREADING TECHNIQUE (500 Threads) #################\n",
+    "        start = 0\n",
+    "        end = 500\n",
+    "        while end < len(historical_data_args):\n",
+    "            with ThreadPoolExecutor() as executor:\n",
+    "                executor.map(get_historical_data,historical_data_args[start:end])\n",
+    "            time.sleep(15)\n",
+    "            start += 500\n",
+    "            end += 500\n",
     "\n",
-    "        for argument in historical_data_args:\n",
-    "            result = get_historical_data(argument)\n",
-    "            if result == True:\n",
-    "                pass\n",
-    "            else:\n",
-    "                not_found_symbols.append(result)\n",
-    "        print(\"Not found symbols: \", not_found_symbols)\n"
+    "        # print(historical_data_args[end-1])\n",
+    "\n",
+    "\n",
+    "        ############  LOOPING TECHNIQUE ####################\n",
+    "        \n",
+    "        # for symbol in symbols:\n",
+    "        #     historical_data_args.append((symbol,from_date,to_date))\n",
+    "        # not_found_symbols = []\n",
+    "        # for argument in historical_data_args:\n",
+    "        #     result = get_historical_data(argument)\n",
+    "        #     if result == True:\n",
+    "        #         pass\n",
+    "        #     else:\n",
+    "        #         not_found_symbols.append(result)\n",
+    "        # print(\"Not found symbols: \", not_found_symbols)\n"
    ]
   },
   {
