Made minor changed in original project

--- a/get_categories_for_symbol.ipynb
+++ b/get_categories_for_symbol.ipynb
@@ -133,46 +133,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "def main():\n",
-    "    path_to_save = input(\"Enter a path/location to save: \")\n",
-    "    if os.path.exists(path=path_to_save):\n",
-    "        choice = input(\"\"\"Enter your choice:\n",
-    "        1. For Stocks\n",
-    "        2. For Funds\n",
-    "        3. For ETF's\n",
-    "        4. For Indices\n",
-    "        5. For Forex currency\n",
-    "        6. For Bonds\n",
-    "        7. For Commodities\n",
-    "        8. For Certificates\n",
-    "        9. For cryptos\n",
-    "        10. For All\n",
-    "        \"\"\")\n",
-    "        \n",
-    "        if choice == \"1\":\n",
-    "            csv_for_stocks_data(path=path_to_save)\n",
-    "        elif choice == \"2\":\n",
-    "            csv_for_funds_data(path=path_to_save)\n",
-    "        elif choice == \"3\":\n",
-    "            csv_for_etfs_data(path=path_to_save)\n",
-    "        elif choice == \"4\":\n",
-    "            csv_for_indices_data(path=path_to_save)\n",
-    "        elif choice == \"5\":\n",
-    "            csv_for_forex_currency_data(path=path_to_save)\n",
-    "        elif choice == \"6\":\n",
-    "            csv_for_bonds_data(path=path_to_save)\n",
-    "        elif choice == \"7\":\n",
-    "            csv_for_commodities_data(path=path_to_save)\n",
-    "        elif choice == \"8\":\n",
-    "            csv_for_certificates_data(path=path_to_save)\n",
-    "        elif choice == \"9\":\n",
-    "            csv_for_cryptos_data(path=path_to_save)\n",
-    "        elif choice == \"10\":\n",
-    "            fetch_threads(path=path_to_save)\n",
-    "        else:\n",
-    "            print(\"Please enter a valid choice..!\")\n",
+    "    current_dir = os.getcwd()\n",
+    "    if os.path.exists(f\"{current_dir}/categories\"):\n",
+    "        pass\n",
+    "        # print(path_to_save)\n",
     "    else:\n",
-    "        print(\"Please, Enter a valid path..!\")"
+    "        os.mkdir(\"categories\")\n",
+    "    path_to_save = current_dir + \"/\" + \"categories\"\n",
+    "    choice = input(\"\"\"Enter your choice:\n",
+    "    1. For Stocks\n",
+    "    2. For Funds\n",
+    "    3. For ETF's\n",
+    "    4. For Indices\n",
+    "    5. For Forex currency\n",
+    "    6. For Bonds\n",
+    "    7. For Commodities\n",
+    "    8. For Certificates\n",
+    "    9. For cryptos\n",
+    "    10. For All\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    if choice == \"1\":\n",
+    "        csv_for_stocks_data(path=path_to_save)\n",
+    "    elif choice == \"2\":\n",
+    "        csv_for_funds_data(path=path_to_save)\n",
+    "    elif choice == \"3\":\n",
+    "        csv_for_etfs_data(path=path_to_save)\n",
+    "    elif choice == \"4\":\n",
+    "        csv_for_indices_data(path=path_to_save)\n",
+    "    elif choice == \"5\":\n",
+    "        csv_for_forex_currency_data(path=path_to_save)\n",
+    "    elif choice == \"6\":\n",
+    "        csv_for_bonds_data(path=path_to_save)\n",
+    "    elif choice == \"7\":\n",
+    "        csv_for_commodities_data(path=path_to_save)\n",
+    "    elif choice == \"8\":\n",
+    "        csv_for_certificates_data(path=path_to_save)\n",
+    "    elif choice == \"9\":\n",
+    "        csv_for_cryptos_data(path=path_to_save)\n",
+    "    elif choice == \"10\":\n",
+    "        fetch_threads(path=path_to_save)\n",
+    "    else:\n",
+    "        print(\"Please enter a valid choice..!\")"
    ]
   },
   {
