--- a/get_historical_data.ipynb
+++ b/get_historical_data.ipynb
@@ -215,13 +215,10 @@
    "source": [
     "import time\n",
     "from datetime import datetime\n",
-    "import pandas as pd\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "def main():\n",
-    "    df = pd.read_csv(\"F:\\\\UpWork\\\\Scrape_investing_Ashish_Sir\\\\categories\\\\stocks.csv\") # Change the path before running\n",
-    "    symbols = df[\"symbol\"].to_list()\n",
-    "    # symbols = input(\"Enter symbols(separated by , ): \").split(\",\")\n",
+    "    symbols = input(\"Enter symbols(separated by , ): \").split(\",\")\n",
     "    from_date = input(\"Enter from date(yyyy-mm-dd): \")\n",
     "    to_date = input(\"Enter to date(yyyy-mm-dd): \")\n",
     "    if datetime.strptime(from_date,\"%Y-%m-%d\").date() > datetime.strptime(to_date,\"%Y-%m-%d\").date():\n",
@@ -230,14 +227,8 @@
     "        historical_data_args = []\n",
     "        [historical_data_args.append((symbol,from_date,to_date)) for symbol in symbols]\n",
     "        ############ THREADING TECHNIQUE (500 Threads) #################\n",
-    "        start = 0\n",
-    "        end = 500\n",
-    "        while end < len(historical_data_args):\n",
-    "            with ThreadPoolExecutor() as executor:\n",
-    "                executor.map(get_historical_data,historical_data_args[start:end])\n",
-    "            time.sleep(15)\n",
-    "            start += 500\n",
-    "            end += 500\n",
+    "        with ThreadPoolExecutor() as executor:\n",
+    "            executor.map(get_historical_data,historical_data_args)\n",
     "\n",
     "        # print(historical_data_args[end-1])\n",
     "\n",
@@ -271,10 +262,9 @@
    "outputs": [],
    "source": [
     "main()\n",
-    "\n",
     "# Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36\n",
     "\n",
-    "## TESTING STOCKS - Symbol Column \n",
+    "## TESTING STOCKS - Symbol Column\n",
     "# TS,APBR,GGAL,TXAR,PAMP,TECO2,BPAT,ALUA,BBAR,BMA,EDN,TRAN,MIRG,BHIP,AGRO,AUSO,,GAMI,EMBR3,ENBR3,ZGPS,\n",
     "# CPLE6,CRDE3,CSAN3,CSMG3,CSNA3,LIQO3,CTNM4,CYRE3,DASA3,DIRR3,DTEX3,ECOR3,EEEL3,ELEK4,ELET3,ELET6,PROJ,5EO,\n",
     "# CTSA3,CTSA4,CVCB3T,DOHL4,DTCY3,EALT4,EKTR4,ELEK3,EMAE4,ENGI3,ENMT3,ESTR4,FESA3,FNAM11,FSRF11KRIP,5CP,5SR,\n",
